--- a/app/assets/stylesheets/homepage.scss
+++ b/app/assets/stylesheets/homepage.scss
@@ -1,3 +1,425 @@
 // Place all the styles related to the Homepage controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+.topnav {
+    text-align: right;
+    padding-top: 25px;
+}
+
+.name {
+    float: left;
+    color: rgb(2, 0, 133);
+    font-family: "Lucida Console", Mmonospace;
+    font-size: 25px;
+}
+
+.nav-links {
+    color: rgb(2, 0, 133);
+    text-decoration: none;
+    padding: 10px;
+}
+
+.topnav a:hover {
+    background-color: rgb(2, 0, 133);
+    color: rgb(255, 255, 255);
+}
+
+#intro_sub {
+    font-size: 30px;
+    flex-direction: column;
+    padding: 60px;
+}
+
+#tabout {
+    font-size: 40px;
+    color: white;
+}
+
+#Sabout {
+    font-size: 25px;
+    color: white;
+    padding: 25px;
+}
+
+#parabout {
+    color: white;
+    font-size: 20px;
+}
+
+body,
+html {
+    height: 100%;
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+* {
+    box-sizing: border-box;
+}
+
+#copyr {
+    font-size: 5px;
+}
+
+.fa {
+    padding: 20px;
+    font-size: 50px;
+    width: 70px;
+    text-align: center;
+    text-decoration: none;
+    margin: 5px 2px;
+    border-radius: 70%;
+}
+
+.fa:hover {
+    opacity: 0.7;
+}
+
+.fa-facebook {
+    background: #3B5998;
+    color: white;
+}
+
+.fa-twitter {
+    background: #55ACEE;
+    color: white;
+}
+
+.fa-google {
+    background: #dd4b39;
+    color: white;
+}
+
+.fa-linkedin {
+    background: #007bb5;
+    color: white;
+}
+
+.bg-image {
+    /* Full height */
+    height: 70%;
+    /* Center and scale the image nicely */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+* {
+    box-sizing: border-box;
+}
+
+body {
+    display: flex;
+    min-height: 430vh;
+    flex-direction: column;
+    margin: 0;
+}
+
+#aboutus {
+    display: flex;
+    flex: 1;
+    text-align: center;
+}
+
+#aboutus>dome {
+    flex: 0 0 50vw;
+    background-image: url("plant.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+#aboutus>about {
+    flex: 0 0 50vw;
+    background: rgb(243, 130, 38);
+    padding: 100px;
+}
+
+#main {
+    display: flex;
+    flex: 1;
+}
+
+#main>article {
+    flex: 1;
+    background: white;
+    border: 1px solid black;
+}
+
+
+/* #main>nav,
+#main>aside {
+    flex: 0 0 20vw;
+    background: beige;
+}
+
+#main>nav {
+    order: -1;
+}*/
+
+intro {
+    height: 90vh;
+    /* Full height */
+    /* Center and scale the image nicely */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-image: url("scam.png");
+    font-size: 80px;
+    text-align: center;
+    padding: 200px;
+    font-weight: bold;
+    color: rgb(80, 80, 102);
+    text-shadow: 0 1px 0 #ccc, 0 2px 0 #c9c9c9, 0 3px 0 #bbb, 0 4px 0 #b9b9b9, 0 5px 0 #aaa, 0 6px 1px rgba(0, 26, 255, 0.1), 0 0 5px rgba(4, 0, 255, 0.1), 0 1px 3px rgba(4, 0, 255, 0.3), 0 3px 5px rgba(4, 0, 255, 0.2), 0 5px 10px rgba(4, 0, 255, 0.25), 0 10px 10px rgba(4, 0, 255, 0.2), 0 20px 20px rgba(17, 0, 255, 0.15);
+}
+
+reviews {
+    height: 70vh;
+    /*not growable(0), not shrinkable(0), intial length()*/
+    margin: 10px;
+    border: 1px solid #ccc;
+    padding: 0;
+    display: flex;
+}
+
+.people {
+    background-image: url("location.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    border: 1px solid #ccc;
+    box-shadow: 2px 2px 6px 0px rgba(0, 0, 0, 0.3);
+    flex: 1;
+}
+
+#row {
+    height: 100%;
+    align-items: stretch;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    overflow-x: auto;
+    overflow-y: hidden;
+    align-items: center;
+}
+
+.cards {
+    /*float: left;*/
+    max-width: 33.333%;
+    padding: 12px;
+    margin: 10px;
+    border: 1px solid #55ACEE;
+    flex-basis: 10;
+    flex-grow: 0;
+    flex-shrink: 0;
+    background-color: rgb(80, 80, 102);
+}
+
+.cards>img {
+    margin-bottom: 12px;
+}
+
+.cards-text {
+    font-size: 85%;
+}
+
+#comments {
+    background-color: rgb(127, 152, 173);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    flex: 1;
+    align-items: center;
+}
+
+#container {
+    height: 100%;
+    align-items: center !important;
+    background-color: rgb(127, 152, 173);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    flex: 1;
+}
+
+contact {
+    height: 70vh;
+    color: rgb(255, 255, 255);
+    background-image: url("support.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 200px;
+}
+
+header,
+footer {
+    background: rgb(255, 255, 255);
+    height: 15vh;
+}
+
+header {
+    border-top: 5px solid rgb(2, 0, 133);
+}
+
+footer {
+    align-self: center;
+    font-size: 20px;
+    text-align: center;
+}
+
+header,
+footer,
+article,
+nav,
+aside,
+review,
+dome,
+about {
+    padding: 1em;
+}
+
+
+/* card section of code */
+
+#main2 {
+    display: flex;
+    width: auto;
+}
+
+.card {
+    flex-direction: row;
+    flex-grow: 1;
+    /*flex-wrap: wrap;
+    /* keeps from overflowing*/
+    align-items: stretch;
+}
+
+.card {
+    /*flex: 0 0 200px;
+    /*not growable(0), not shrinkable(0), intial length()*/
+    margin: 10px;
+    border: 1px solid #ccc;
+    box-shadow: 2px 2px 6px 0px rgba(0, 0, 0, 0.3);
+    padding: 0;
+    flex: 1;
+}
+
+.card img {
+    padding: 0px;
+    width: 100%;
+    height: 50%;
+    /*style="vertical-align:middle"*/
+}
+
+#card {
+    margin: 10px;
+    border: 1px solid #ccc;
+    box-shadow: 2px 2px 6px 0px rgba(0, 0, 0, 0.3);
+    padding: 0;
+}
+
+.card .text {
+    padding: 0 20px 20px;
+    align-items: center;
+    flex-wrap: wrap;
+    margin-top: 20%;
+}
+
+.cardButton {
+    background: gray;
+    border: 0;
+    color: white;
+    padding: 10px;
+    width: 25%;
+    text-align: center;
+    margin-top: 5%;
+    width: 100%;
+}
+
+h3 {
+    text-align: center;
+}
+
+h4 {
+    font-size: 200%;
+    text-align: center;
+}
+
+
+/*
+.card .text>button {
+    background: gray;
+    border: 0;
+    color: white;
+    padding: 10px;
+    width: 25%;
+    text-align: center;
+    align-content: center;
+}*/
+
+
+/*contact forms */
+
+.wrapper {
+    background-color: 0, 0, 0;
+    list-style-type: none;
+    padding: 0;
+    border-radius: 3px;
+    border: 1px solid #f1f1f1;
+}
+
+.form-row {
+    display: flex;
+    justify-content: center;
+    padding: 8px;
+}
+
+.form-row>label {
+    padding: 8px 0 8px 0;
+    flex: 1;
+}
+
+.form-row>input {
+    flex: 2;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.2);
+}
+
+.form-row>input,
+.form-row>button {
+    padding: 8px;
+}
+
+.form-row>button {
+    background: gray;
+    color: white;
+    border: 0;
+}
+
+#functions {
+    background-image: url("functions.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    border: 1px solid #ccc;
+    box-shadow: 2px 2px 6px 0px rgba(0, 0, 0, 0.3);
+}
+
+#database {
+    background-image: url("database.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    border: 1px solid #ccc;
+    box-shadow: 2px 2px 6px 0px rgba(0, 0, 0, 0.3);
+}
+
+#systemlogs {
+    background-image: url("logs.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    border: 1px solid #ccc;
+    box-shadow: 2px 2px 6px 0px rgba(0, 0, 0, 0.3);
+}
