--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -18,7 +18,7 @@
                 <a class="nav-links" class="active" href="/"> Home</a>
                 <a class="nav-links" href="/Book.html">Services</a>
 
-                <a class="nav-links" href="/AboutMe.html">Database</a>
+                <a class="nav-links" href="/tables/index.html">Database</a>
 
             </div>
 
@@ -27,17 +27,17 @@
 
     <intro>Introducing ECEN 403 Weather Monitoring Group 58 Project
         <div id="intro_sub">Always striving to be better</div>
-        
+
     </intro>
 
     <div id="aboutus">
         <dome></dome>
         <about>
             <div id="tabout">Executive Summary</div>
-            
+
             <div id="parabout">Most plants require water, sunlight, and soil in order to grow. The soil requirement often limits what plants can grow in specific environments. Hydroponic plants circumvent this issue by only requiring water and sunlight, where the nutrients that were usually provided by the soil instead come from the water.
             To make an automated hydroponic plant farm, sensors would be placed in the hydroponic greenhouses to measure the weather conditions and the nutrients in the plants. Those measurements are then stored in a database, where it is analyzed by a machine learning program. If unideal values are found, the program sends commands to actuators in the greenhouse to regulate the weather conditions.
-            Our view is that the system could be used in multiple scenarios, in a public/consumer level, for space research and exploration and most importantly in greenhouses around the world. We believe that automating the system improves the current hydrophobic technology and with only minor limitations the system can be viable. 
+            Our view is that the system could be used in multiple scenarios, in a public/consumer level, for space research and exploration and most importantly in greenhouses around the world. We believe that automating the system improves the current hydrophobic technology and with only minor limitations the system can be viable.
              </div>
         </about>
     </div>
@@ -48,7 +48,7 @@
                 <div class="text">
                     <h3>Database information</h3>
                     <p>Here you can see all data that has been obtained so far.</p>
-                    
+
                     <button class="cardButton">Click here to begin</button>
                 </div>
             </div>
@@ -145,4 +145,3 @@
 </body>
 
 </html>
-
